# mom-em

./: CMakeLists.txt  README.md  constants.f90
plot/: plot_eigen.m
ref/: AlGaAs.ref  AlGaAsZB.chi2  AlGaAsZB.chi3  GaAsWZ.chi2  GaAsZB.chi2  ag-drude.ref  agjc-damp.ref  agjc-undamp.ref  asilicon.ref  au40.ref  au40drlz.ref  audrlz.ref  audrude.ref  chi2.m  chromium.ref  dadap.ref  gaas.ref  n145.ref  palik.ref  psilicon.ref  silica.ref  silicon.ref  tijc.ref  vacuum.ref  xu.ref
ref/refractiveindex.info/: AlGaAs_k.txt  AlGaAs_n.txt  AlMcPeak.ref  AlMcPeak.txt  AlMcPeak_k.txt  AlMcPeak_n.txt  CrJC.ref  data_convert.m  data_ref_plot.m
src/: CMakeLists.txt  aux.f90  bc.f90  bessel.f90  common.f90  constants.f90  cs.f90  data.f90  diffr.f90  ffields.f90  focal.f90  green.f90  greenprd.f90  h5_wrapper.f90  hankel_api.f90  intbase.f90  interface.f90  io.f90  linalg.f90  main.f90  material.f90  mesh.f90  modes.f90  nfields.f90  nfpost.f90  nlbulk.f90  nlsurf.f90  pec.f90  pupil.f90  quad.f90  rwgf.f90  scattering.f90  solver.f90  solver_vie.f90  source.f90  srcint.f90  symmetry.f90  sysmat.f90  time.f90  vie.f90
src/fson/: fson.f90  fson_path_m.f90  fson_value_m.f90  makefile
src/fson/src/examples/: example1.f90
src/toms644/: Readme  cbsubs.f  cqcbes.f  machcon.f  machcon.f90  zbsubs.f  zqcbes.f
src/toms794/: hankel_driver.f  src.f
